fixed font bug on mobile

--- a/main.scss
+++ b/main.scss
@@ -104,6 +104,19 @@ body {
 	}
 }
 
+.reducedFontSize1 {
+	font-size: 2rem;
+	@media screen and (max-width: $mobile) {
+		font-size: 1.7rem;
+	}
+}
+.reducedFontSize2 {
+	font-size: 1.5rem;
+	@media screen and (max-width: $mobile) {
+		font-size: 1.3rem;
+	}
+}
+
 .keyboard {
 	width: 100%;
 	height: 65%;
